Software encoding on the pi's (#7)
- Changed to software encoding / decoding on the camera / headset
- Server is now just keeping sockets open and piping things out!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ endif()
 if (CMAKE_BUILD_TYPE STREQUAL Debug)
     message("Setting debug flags")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb")
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
@@ -50,8 +52,6 @@ if (FEATURE_CAMERA)
     add_subdirectory(${internal_dir}/infrastructure/camera)
 endif()
 if (FEATURE_ENCODER)
-    add_subdirectory(${third_party_dir}/jetson_multimedia_api)
-    include_directories(${third_party_dir}/jetson_multimedia_api/include)
     add_subdirectory(${internal_dir}/infrastructure/encoder)
 endif()
 if (FEATURE_DECODER)
