Abstracted out camera elements

--- a/internal/infrastructure/encoder/CMakeLists.txt
+++ b/internal/infrastructure/encoder/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 find_library(JPEG_LIBRARY jpeg REQUIRED)
 
-set(SOURCES sw_encoder.cpp)
+set(SOURCES encoder.cpp sw_encoder.cpp null_encoder.cpp)
 set(TARGET_LIBS pthread jpeg)
 
 add_library(encoder STATIC ${SOURCES})
