--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -3,10 +3,12 @@ include_directories(${BOOST_INCLUDEDIR})
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${root_dir}/bin)
 
+add_definitions(-DAPPLICATION_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+
 if (
     NOT AN_PLATFORM_TYPE STREQUAL RPI
 )
-    add_executable(app_server server.cpp)
+    add_executable(app_server server.cpp runtime.cpp)
     target_link_libraries(app_server PRIVATE pthread service)
 endif()
 
@@ -15,7 +17,7 @@ if (
         OR AN_PLATFORM STREQUAL RPI_CAMERA_CC
         OR AN_PLATFORM STREQUAL BROOSE_LINUX_LAPTOP
 )
-    add_executable(app_camera camera.cpp)
+    add_executable(app_camera camera.cpp runtime.cpp)
     target_link_libraries(app_camera PRIVATE pthread service)
 endif()
 
@@ -24,6 +26,6 @@ if (
         OR AN_PLATFORM STREQUAL RPI_HEADSET_CC
         OR AN_PLATFORM STREQUAL BROOSE_LINUX_LAPTOP
 )
-    add_executable(app_headset headset.cpp)
+    add_executable(app_headset headset.cpp runtime.cpp)
     target_link_libraries(app_headset PRIVATE pthread service graphics decoder tcp)
 endif()
