--- a/packer/headset.ans.yml
+++ b/packer/headset.ans.yml
@@ -36,7 +36,7 @@
         shell: /bin/bash
     - name: Provision WiFi
       copy:
-        src: ./wpa_supplicant.conf
+        src: ./headset.wpa_supplicant.conf
         dest: /boot/wpa_supplicant.conf
     - name: Provision SSH
       file:
@@ -44,7 +44,7 @@
         state: touch
     - name: Setup dhcpcd
       copy:
-        src: ./dhcpcd.conf
+        src: ./headset.dhcpcd.conf
         dest: /etc/dhcpcd.conf
     - name: Change the Timezone
       shell:
