Stopping here because I don't want to be making mistakes; need to finsih up the connection manager and then test

--- a/internal/service/CMakeLists.txt
+++ b/internal/service/CMakeLists.txt
@@ -11,7 +11,7 @@ if (FEATURE_CAMERA)
 endif()
 
 if (NOT AN_PLATFORM_TYPE STREQUAL RPI)
-    set(SOURCES ${SOURCES} server_streamer.cpp)
+    set(SOURCES ${SOURCES} server/server_streamer.cpp server/connection_manager.cpp)
     set(TARGET_LIBS ${TARGET_LIBS})
 endif()
 
