For some reason, clion made a fully qualified path

--- a/packer/headset.wpa_supplicant.conf
+++ b/packer/headset.wpa_supplicant.conf
@@ -3,7 +3,7 @@ ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
 
 network={
-  ssid="Augmented Normalcy"
+  ssid="Augmented Normalcy_5G"
   psk="bloodymailmanprom3"
 }
 
