--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,7 +22,7 @@ if (LIBCAMERA_AVAILABLE)
 endif()
 
 
-if (FEATURE_ENCODER)
+if (FEATURE_ENCODER AND AN_PLATFORM_TYPE STREQUAL RPI)
     set(tests ${tests}
             test_service/test_camera_streamer.cpp
             test_infrastructure/test_encoder/fake_camera.cpp
@@ -36,7 +36,7 @@ if (NOT AN_PLATFORM_TYPE STREQUAL RPI)
     set(tests_link_libraries ${tests_link_libraries} service)
 endif()
 
-if (FEATURE_DECODER)
+if (FEATURE_DECODER AND AN_PLATFORM_TYPE STREQUAL RPI)
     set(tests ${tests}
             test_infrastructure/test_decoder/test_sw_decoder.cpp
     )
