--- a/management/playbooks/20230521.hello-ansible.yml
+++ b/management/playbooks/20230521.hello-ansible.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: all
   tasks:
+
     - name: Create a file named /tmp/hello_ansible
       file:
         path: /tmp/hello_ansible
@@ -21,4 +22,15 @@
         path: /tmp/hello_ansible_headsets
         state: touch
       when: "'headsets' in group_names"
+
+    - name: Check internet connectivity
+      command: ping -c3 8.8.8.8
+      register: result
+      ignore_errors: true
+
+    - name: Show result
+      debug:
+        msg: "Internet connectivity check failed"
+      when: result.rc != 0
+
 ...
