I don't think ping would ever work; wonder if this has ever worked

--- a/management/playbooks/20230521.hello-ansible.ini
+++ b/management/playbooks/20230521.hello-ansible.ini
@@ -1,3 +1,4 @@
+
 [cameras]
 69.4.20.200
 69.4.20.201
@@ -9,3 +10,9 @@
 69.4.20.101
 69.4.20.102
 69.4.20.103
+
+[s_headset]
+69.4.20.100
+
+[s_headset:vars]
+ansible_ssh_common_args='-o ProxyCommand="nc -x localhost:8080 %h %p"'
