--- a/management/playbooks/20230521.hello-ansible.yml
+++ b/management/playbooks/20230521.hello-ansible.yml
@@ -1,4 +1,5 @@
 ---
+
 - hosts: all
   tasks:
 
@@ -24,7 +25,7 @@
       when: "'headsets' in group_names"
 
     - name: Check internet connectivity
-      command: ping -c3 8.8.8.8
+      command: curl http://example.com
       register: result
       ignore_errors: true
 
