--- a/management/playbooks/20230521.hello-ansible.yml
+++ b/management/playbooks/20230521.hello-ansible.yml
@@ -1,11 +1,12 @@
 ---
 
-- hosts: all
+- hosts: 69.4.20.100
   environment:
     http_proxy: http://localhost:8080
     https_proxy: http://localhost:8080
 
   tasks:
+    - include: ../tasks/tunnel.yml
 
     - name: Create a file named /tmp/hello_ansible
       file:
@@ -32,4 +33,8 @@
       apt:
         update_cache: yes
 
+    - name: Install dependencies
+      apt:
+        pkg:
+          - emacs
 ...
