--- a/management/playbooks/20230521.hello-ansible.yml
+++ b/management/playbooks/20230521.hello-ansible.yml
@@ -1,6 +1,6 @@
 ---
 
-- hosts: 69.4.20.100
+- hosts: all
 
   tasks:
     - name: Create a file named /tmp/hello_ansible
@@ -28,14 +28,6 @@
       apt:
         update_cache: yes
       environment:
-        http_proxy: http://localhost:8080
-        https_proxy: http://localhost:8080
-
-    - name: Install dependencies
-      apt:
-        pkg:
-          - emacs
-      environment:
-        http_proxy: http://localhost:8080
-        https_proxy: http://localhost:8080
+        http_proxy: http://69.4.20.10:8888
+        https_proxy: http://69.4.20.10:8888
 ...
