More openvpn changes

--- a/management/openvpn/broosegoose-linux.d/broosegoose-linux.conf
+++ b/management/openvpn/broosegoose-linux.d/broosegoose-linux.conf
@@ -10,7 +10,7 @@ persist-tun
 nobind
 
 remote-cert-tls server
-tls-auth /etc/openvpn/client/ta.key 1
-ca /etc/openvpn/client/ca.crt
-cert /etc/openvpn/client/broosegoose-linux.crt
-key /etc/openvpn/client/broosegoose-linux.key
+tls-auth /etc/openvpn/client/augmented-client.d/ta.key 1
+ca /etc/openvpn/client/augmented-client.d/ca.crt
+cert /etc/openvpn/client/augmented-client.d/broosegoose-linux.crt
+key /etc/openvpn/client/augmented-client.d/broosegoose-linux.key
