--- a/internal/infrastructure/camera/CMakeLists.txt
+++ b/internal/infrastructure/camera/CMakeLists.txt
@@ -4,6 +4,7 @@ set(TARGET_LIBS pthread)
 
 if (LIBCAMERA_AVAILABLE)
     set(SOURCES ${SOURCES} libcamera_camera.cpp)
+    include_directories(${LIBCAMERA_INCLUDE_DIRS})
     set(TARGET_LIBS ${TARGET_LIBS} ${LIBCAMERA_LINK_LIBRARIES})
 endif()
 
