--- a/internal/infrastructure/gpio/CMakeLists.txt
+++ b/internal/infrastructure/gpio/CMakeLists.txt
@@ -1,9 +1,13 @@
 
 set(SOURCES gpio.cpp null_gpio.cpp)
-set(TARGET_LIBS pthread)
+set(TARGET_LIBS)
 
-if (NOT PIGPIO_AVAILABLE)
+if (PIGPIO_AVAILABLE)
+    # tmp for local development
+    # include_directories(${third_party_dir}/pigpio)
     set(SOURCES ${SOURCES} pigpio_gpio.cpp)
+    include_directories(${PIGPIO_INCLUDE_DIRS})
+    set(TARGET_LIBS ${TARGET_LIBS} ${PIGPIO_LINK_LIBRARIES})
 endif()
 
 add_library(gpio STATIC ${SOURCES})
