Okay; switched to a polling strategy so the button polling doesn't take up too much mem

--- a/internal/infrastructure/gpio/CMakeLists.txt
+++ b/internal/infrastructure/gpio/CMakeLists.txt
@@ -3,11 +3,13 @@ set(SOURCES gpio.cpp null_gpio.cpp)
 set(TARGET_LIBS)
 
 if (PIGPIO_AVAILABLE)
-    # tmp for local development
-    # include_directories(${third_party_dir}/pigpio)
     set(SOURCES ${SOURCES} pigpio_gpio.cpp)
     include_directories(${PIGPIO_INCLUDE_DIRS})
     set(TARGET_LIBS ${TARGET_LIBS} ${PIGPIO_LINK_LIBRARIES})
+# else()
+    # tmp for local development
+    # include_directories(${third_party_dir}/pigpio)
+    # set(SOURCES ${SOURCES} pigpio_gpio.cpp)
 endif()
 
 add_library(gpio STATIC ${SOURCES})
