--- a/internal/infrastructure/bms/CMakeLists.txt
+++ b/internal/infrastructure/bms/CMakeLists.txt
@@ -2,8 +2,9 @@
 set(SOURCES bms.cpp null_bms.cpp)
 set(TARGET_LIBS pthread)
 
-if (NOT BMS_SERIAL_AVAILABLE)
+if (BMS_SERIAL_AVAILABLE)
     set(SOURCES ${SOURCES} serial_bms.cpp)
+    set (TARGET_LIBS ${TARGET_LIBS} Boost::system Boost::regex)
 endif()
 
 add_library(bms STATIC ${SOURCES})
