--- a/system/ntp.client.conf
+++ b/system/ntp.client.conf
@@ -17,7 +17,7 @@ filegen clockstats file clockstats type day enable
 # You do need to talk to an NTP server or two (or three).
 #server ntp.your-provider.example
 
-server 69.4.20.10
+server 69.4.20.10 iburst
 
 # pool.ntp.org maps to about 1000 low-stratum NTP servers.  Your server will
 # pick a different set every time it starts up.  Please consider joining the
