Need to work on screen state

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ set(third_party_dir ${root_dir}/third_party)
 include_directories(${root_dir}/internal)
 include_directories(${third_party_dir}/nlohmann)
 
+add_subdirectory(${internal_dir}/domain)
+
 add_subdirectory(${internal_dir}/infrastructure/tcp)
 add_subdirectory(${internal_dir}/infrastructure/websocket)
 
