Okay, virtualized and used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ include(cmake/boost.cmake)
 include(cmake/camera.cmake)
 include(cmake/encoder.cmake)
 include(cmake/decoder.cmake)
-include(cmake/display.cmake)
+include(cmake/graphics.cmake)
 include(cmake/bms.cmake)
 include(cmake/gpio.cmake)
 # include(cmake/location.cmake)
@@ -64,7 +64,7 @@ endif()
 if (FEATURE_DECODER)
     add_subdirectory(${internal_dir}/infrastructure/decoder)
 endif()
-if (FEATURE_DISPLAY)
+if (FEATURE_GRAPHICS)
     set(glad_dir ${third_party_dir}/glad)
     include_directories(${glad_dir}/include)
     # for some reason, can only get this to build if I directly include glad instead of compiling it as a shared lib
