--- a/internal/service/CMakeLists.txt
+++ b/internal/service/CMakeLists.txt
@@ -15,7 +15,7 @@ if (NOT AN_PLATFORM_TYPE STREQUAL RPI)
     set(TARGET_LIBS ${TARGET_LIBS})
 endif()
 
-if (FEATURE_DISPLAY)
+if (FEATURE_GRAPHICS)
     if (
         (AN_PLATFORM STREQUAL RPI_HEADSET) OR (AN_PLATFORM STREQUAL RPI_HEADSET_CC)
     )
