Edits for ansible cameras

--- a/packer/camera.ans.yml
+++ b/packer/camera.ans.yml
@@ -141,6 +141,9 @@
     - name: Copy NTP client config
       shell:
         cmd: cp /home/pi/build/2038-AugmentedNormalcy/system/ntp.client.conf /etc/ntp.conf
+    - name: Copy Camera flip boot config
+      shell:
+        cmd: cp /home/pi/build/2038-AugmentedNormalcy/system/camera.boot_config.conf /boot/config.txt
     # MANAGEMENT
     - name: Create ssh dir
       become: yes
