--- a/system/camera.service
+++ b/system/camera.service
@@ -6,7 +6,7 @@ StartLimitIntervalSec=360
 
 [Service]
 Restart=on-failure
-ExecStart=/home/pi/build/2038-AugmentedNormalcy/bin/app_camera
+ExecStart=/home/pi/build/2038-AugmentedNormalcy/bin/app_camera 200
 
 [Install]
 WantedBy=multi-user.target
