--- a/internal/infrastructure/bms/CMakeLists.txt
+++ b/internal/infrastructure/bms/CMakeLists.txt
@@ -3,8 +3,9 @@ set(SOURCES bms.cpp null_bms.cpp)
 set(TARGET_LIBS pthread domain)
 
 if (BMS_SERIAL_AVAILABLE)
+    include_directories(${CppLinuxSerial_INCLUDE_DIRS})
     set(SOURCES ${SOURCES} serial_bms.cpp)
-    set (TARGET_LIBS ${TARGET_LIBS} Boost::system Boost::regex)
+    set (TARGET_LIBS ${TARGET_LIBS} ${CppLinuxSerial_LIBRARIES})
 endif()
 
 add_library(bms STATIC ${SOURCES})
