--- a/packer/headset.ans.yml
+++ b/packer/headset.ans.yml
@@ -132,6 +132,37 @@
       make:
         chdir: /home/pi/build/glfw/build
         target: install
+    # CppLinuxSerial
+    - name: Download CppLinuxSerial
+      become: yes
+      become_user: pi
+      git:
+        repo: https://github.com/gbmhunter/CppLinuxSerial/
+        dest: /home/pi/build/CppLinuxSerial
+    - name: Create CppLinuxSerial build dir
+      become: yes
+      become_user: pi
+      file:
+        path: /home/pi/build/CppLinuxSerial/build
+        state: directory
+        mode: '0755'
+    - name: Setup CppLinuxSerial
+      become: yes
+      become_user: pi
+      shell:
+        chdir: /home/pi/build/CppLinuxSerial/build
+        cmd: cmake -DBUILD_TESTS=FALSE ..
+    - name: Make CppLinuxSerial
+      become: yes
+      become_user: pi
+      make:
+        chdir: /home/pi/build/CppLinuxSerial/build
+        params:
+          NUM_THREADS: 4
+    - name: Install CppLinuxSerial
+      make:
+        chdir: /home/pi/build/CppLinuxSerial/build
+        target: install
     # NORMALCY
     - name: Download Normalcy
       become: yes
