Try hup restart

--- a/management/playbooks/20230602b_headsets.yml
+++ b/management/playbooks/20230602b_headsets.yml
@@ -8,7 +8,7 @@
       shell:
         cmd: systemctl stop headset.service
 
-    - name: Stop Headset service
+    - name: Stop Weston service
       shell:
         cmd: systemctl stop weston.service
 
