--- a/system/headset.service
+++ b/system/headset.service
@@ -6,6 +6,7 @@ StartLimitIntervalSec=360
 
 [Service]
 Restart=on-failure
+RestartForceExitStatus=HUP
 Environment="WAYLAND_DISPLAY=wayland-0"
 Environment="DISPLAY=:0"
 Environment=XDG_RUNTIME_DIR=/var/run/root/1000
