--- a/internal/domain/CMakeLists.txt
+++ b/internal/domain/CMakeLists.txt
@@ -1,3 +1,2 @@
 
-add_library(domain STATIC message.cpp)
-# target_link_libraries(domain PRIVATE IMPORTANT_LIBS)
+add_library(domain STATIC message.cpp button.cpp)
