--- a/internal/infrastructure/gpio/CMakeLists.txt
+++ b/internal/infrastructure/gpio/CMakeLists.txt
@@ -8,6 +8,7 @@ if (PIGPIO_AVAILABLE)
     set(TARGET_LIBS ${TARGET_LIBS} ${PIGPIO_LINK_LIBRARIES})
 # else()
     # tmp for local development
+    # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_PIGIPO_")
     # include_directories(${third_party_dir}/pigpio)
     # set(SOURCES ${SOURCES} pigpio_gpio.cpp)
 endif()
