--- a/internal/service/CMakeLists.txt
+++ b/internal/service/CMakeLists.txt
@@ -20,7 +20,7 @@ if (FEATURE_GRAPHICS)
         (AN_PLATFORM STREQUAL RPI_HEADSET) OR (AN_PLATFORM STREQUAL RPI_HEADSET_CC)
     )
         set(SOURCES ${SOURCES} headset/headset_streamer.cpp)
-        set(TARGET_LIBS ${TARGET_LIBS} decoder graphics websocket gpio bms)
+        set(TARGET_LIBS ${TARGET_LIBS} decoder graphics websocket gpio)
     elseif(
         (AN_PLATFORM STREQUAL RPI_DISPLAY) OR (AN_PLATFORM STREQUAL RPI_DISPLAY_CC)
     )
@@ -28,7 +28,7 @@ if (FEATURE_GRAPHICS)
         set(TARGET_LIBS ${TARGET_LIBS} decoder graphics websocket)
     else()
         set(SOURCES ${SOURCES} headset/headset_streamer.cpp display_streamer.cpp)
-        set(TARGET_LIBS ${TARGET_LIBS} decoder graphics websocket gpio bms)
+        set(TARGET_LIBS ${TARGET_LIBS} decoder graphics websocket gpio)
     endif()
 endif()
 
