--- a/internal/infrastructure/gpio/CMakeLists.txt
+++ b/internal/infrastructure/gpio/CMakeLists.txt
@@ -5,7 +5,7 @@ set(TARGET_LIBS)
 if (PIGPIO_AVAILABLE)
     set(SOURCES ${SOURCES} pigpio_gpio.cpp)
     include_directories(${PIGPIO_INCLUDE_DIRS})
-    set(TARGET_LIBS ${TARGET_LIBS} ${PIGPIO_LINK_LIBRARIES})
+    set(TARGET_LIBS ${TARGET_LIBS} ${PIGPIO_LINK_LIBRARIES} domain)
 # else()
     # tmp for local development
     # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_PIGIPO_")
